# dbt-factory-agent

./: .gitignore  .pre-commit-config.yaml  DESIGN_SPEC.md  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
.semgrep/: rules.yaml
app/: agent.py  fast_api_app.py
app/app_utils/: reasoning_engine_adapter.py  telemetry.py  typing.py
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
jira_webhook/: main.py  pyproject.toml  requirements.txt
scripts/: check_required_fields.py  check_sql_safety.py  known_domains.json  known_environments.json  validate_dbt_configs.py
tests/unit/: test_agent.py  test_jira_webhook_adf.py  test_jira_webhook_transition.py  test_parse_env_and_domain.py
