[project]
name = "dv-jira-webhook"
version = "0.1.0"
description = "FastAPI handler to publish incoming Jira tickets to Pub/Sub for the ADK orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "google-cloud-pubsub>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
